[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Enemy_placeholder.png" type="Texture" id=1]
[ext_resource path="res://scens/enemie/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/enemy/run.png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/shoot.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Move"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bodysprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bodysprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bodysprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Shoot"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Bodysprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bodysprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bodysprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.02, 0.07 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 152, 80 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.57079
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
hframes = 8

[node name="EnSprite" type="Sprite" parent="."]
visible = false
rotation = 1.57079
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Bodysprite" type="Sprite" parent="."]
rotation = 1.57079
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 0, 0, 488, -80, 488, 72 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="RayCast2D2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 488, 0 )
collision_mask = 5

[node name="RayCast2D3" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 488, 40 )
collision_mask = 5

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 488, -48 )
collision_mask = 5

[node name="LegAnim" type="AnimationPlayer" parent="."]
anims/Move = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="BodyAnim" type="AnimationPlayer" parent="."]
playback_speed = 0.3
anims/RESET = SubResource( 4 )
anims/Shoot = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="BodyAnim" to="." method="_on_BodyAnim_animation_finished"]
[connection signal="animation_started" from="BodyAnim" to="." method="_on_BodyAnim_animation_started"]
